Bug 349988 - Gmic hangs even on preview effects
Summary: Gmic hangs even on preview effects
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-07 08:08 UTC by MichalG
Modified: 2015-07-10 15:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MichalG 2015-07-07 08:08:47 UTC
GMIC updates without problem (in Krita).
But still, for me GMIC under Krita stays unusable (especially as for newest addons). 
It crashes regurarly when trying to preview or do the effect to real canvas.

I enclosed the screenshot here:
http://wstaw.org/m/2015/07/07/GMIC_Error.png

Krita version is git's 2.9.5
System is Linux Mint KDE 64-bit (v17.1)
Comment 1 LukasT 2015-07-08 07:57:22 UTC
Can you try again with Chromatic aberrations? 

After I updated the filters, I closed the dialog in hope that it is enough, 
but I had to restart Krita so that Chromatic aberrations works.

That's a bug, I will try to fix it soon!
Comment 2 LukasT 2015-07-08 08:42:56 UTC
Git commit f5eec94d1e70febd5bf17107c06e5bcb370a1c0c by Lukáš Tvrdý.
Committed on 08/07/2015 at 08:40.
Pushed by lukast into branch 'calligra/2.9'.

Fix filters that are added by update definitions

New filters after update were not properly passed to G'Mic,
because the buffer with g'mic custom commands was filled every
time the dialog got displayed and not cleared after close.

M  +11   -5    krita/plugins/extensions/gmic/kis_gmic_plugin.cpp
M  +3    -0    krita/plugins/extensions/gmic/kis_gmic_plugin.h

http://commits.kde.org/calligra/f5eec94d1e70febd5bf17107c06e5bcb370a1c0c
Comment 3 MichalG 2015-07-09 09:04:40 UTC
(In reply to LukasT from comment #1)
> Can you try again with Chromatic aberrations? 

Yes, I did.



> After I updated the filters, I closed the dialog in hope that it is enough, 
> but I had to restart Krita so that Chromatic aberrations works.
> 
> That's a bug, I will try to fix it soon!

Looks like something has been corrected as for now the preview and main action do not crash so insolently (works quite good)....  At least that "Chromatic aberration".  But some older effects still can do it and Krita exits sometimes.

That's about Linux version of Krita+Gmic.   Windows' port of them works horribly (crashes are frequent, etc.) .
Comment 4 LukasT 2015-07-10 15:35:43 UTC
>But some older effects still can do it and Krita exits sometimes.

> That's about Linux version of Krita+Gmic.   Windows' port of them works horribly (crashes are 
> frequent, etc.) .

Please, do report gmic filters that crash Krita!