Fix filters that are added by update definitions

New filters after update were not properly passed to G'Mic,
because the buffer with g'mic custom commands was filled every
time the dialog got displayed and not cleared after close.

BUG:349988